# draughts-coevolution

./: .gitignore  02vDeterministic_finaleval.txt  2000randomlychosendeterministic.txt  README.md  bestrandom02.txt  bestrandom05.txt  bestrandom07.txt  draughts-coevol.cabal  eval02final.txt  eval05final.txt  eval07final.txt  output1303_1331.txt  output1303_1416.txt  output1403_0030.txt  output1403_1958runnnEApatternrunrand.txt  stack.yaml
70vs60for60cross50mut5/noRand/: EA-18-3-20h47  EAStats-18-3-20h47  opponents.txt
70vs60for60cross50mut5/rand1and10/: EA-18-3-20h53  EAStats-18-3-20h53  opponents.txt
70vs60for70cross50mut10/Randminus10to10/: EA-18-3-22h2  EAStats-18-3-22h2
70vs60for70cross50mut10/nonRand/: EA-18-3-21h52  EAStats-18-3-21h52
COEAexperiments/: 27-3-0h30COEAStats.csv  27-3-0h31COEAStats.csv  27-3-0h33COEAStats.csv  27-3-12h27COEAStats.csv  27-3-12h29COEAStats.csv  27-3-12h31COEAStats.csv  27-3-19h10COEAStats.csv  27-3-19h1COEAStats.csv  27-3-19h8COEAStats.csv  27-3-2h43COEAStats.csv  27-3-4h5COEAStats.csv  27-3-4h7COEAStats.csv  28-3-0h12COEAStats.csv  28-3-0h13COEAStats.csv  28-3-0h14COEAStats.csv  28-3-14h52COEAStats.csv  28-3-14h53COEAStats.csv  28-3-19h0COEAStats.csv  28-3-19h1COEAStats.csv  28-3-19h5COEAStats.csv  28-3-8h10COEAStats.csv  28-3-8h9COEAStats.csv  29-3-6h5COEAStats.csv
COEAexperiments/deterministic/: 29-3-12h50COEAStats.csv  29-3-6h7COEAStats.csv
app/: Main.hs
parsing/: statsParser.py
runs/02randomness/: 30-3-21h0COEAStats.csv  30-3-21h1COEAStats.csv  30-3-21h57COEAStats.csv  30-3-21h58COEAStats.csv  30-3-21h59COEAStats.csv  30-3-21h8COEAStats.csv  31-3-14h23COEAStats.csv  31-3-14h25COEAStats.csv  31-3-14h27COEAStats.csv  31-3-14h33COEAStats.csv  31-3-14h36COEAStats.csv  31-3-14h38COEAStats.csv  31-3-14h44COEAStats.csv  31-3-14h46COEAStats.csv  31-3-14h48COEAStats.csv  31-3-15h0COEAStats.csv  31-3-15h15COEAStats.csv  31-3-15h17COEAStats.csv  31-3-15h21COEAStats.csv  31-3-15h3COEAStats.csv  31-3-15h5COEAStats.csv  31-3-8h50COEAStats.csv  31-3-8h54COEAStats.csv  31-3-8h55COEAStats.csv  31-3-8h56COEAStats.csv  31-3-8h58COEAStats.csv  31-3-8h59COEAStats.csv  31-3-9h1COEAStats.csv  31-3-9h27COEAStats.csv  31-3-9h2COEAStats.csv
runs/05randomness/: 1-4-1h40COEAStats.csv  1-4-1h42COEAStats.csv  1-4-1h45COEAStats.csv  1-4-1h47COEAStats.csv  1-4-1h48COEAStats.csv  1-4-1h50COEAStats.csv  1-4-1h52COEAStats.csv  1-4-1h54COEAStats.csv  1-4-1h56COEAStats.csv  1-4-1h58COEAStats.csv  1-4-2h0COEAStats.csv  1-4-2h2COEAStats.csv  1-4-2h4COEAStats.csv  1-4-2h7COEAStats.csv  1-4-2h9COEAStats.csv  31-3-21h16COEAStats.csv  31-3-21h17COEAStats.csv  31-3-21h18COEAStats.csv  31-3-21h19COEAStats.csv  31-3-21h20COEAStats.csv  31-3-21h21COEAStats.csv  31-3-21h22COEAStats.csv  31-3-21h23COEAStats.csv  31-3-21h24COEAStats.csv  31-3-21h25COEAStats.csv  31-3-21h26COEAStats.csv  31-3-21h27COEAStats.csv  31-3-21h28COEAStats.csv  31-3-21h29COEAStats.csv  31-3-21h30COEAStats.csv
runs/07randomness/: 1-4-13h10COEAStats.csv  1-4-13h11COEAStats.csv  1-4-13h21COEAStats.csv  1-4-13h22COEAStats.csv  1-4-13h26COEAStats.csv  1-4-13h27COEAStats.csv  1-4-13h28COEAStats.csv  1-4-13h29COEAStats.csv  1-4-13h47COEAStats.csv  1-4-13h48COEAStats.csv  1-4-13h53COEAStats.csv  1-4-13h54COEAStats.csv  1-4-13h55COEAStats.csv  1-4-13h9COEAStats.csv  1-4-18h20COEAStats.csv  1-4-8h36COEAStats.csv  1-4-8h37COEAStats.csv  1-4-8h45COEAStats.csv  1-4-8h54COEAStats.csv  1-4-8h55COEAStats.csv  1-4-8h56COEAStats.csv  1-4-9h0COEAStats.csv  1-4-9h11COEAStats.csv  1-4-9h13COEAStats.csv  1-4-9h14COEAStats.csv  1-4-9h16COEAStats.csv  (+4 more)
src/: Board.hs  Boardvector.hs  DraughtsBoard.hs  Evolution.hs  GamePlay.hs  MoveSelectMechanical.hs  MoveSelectTree.hs  MoveSelection.hs  Utils.hs
test/: BoardvectorSpec.hs  DraughtsBoardSpec.hs  EvolutionSpec.hs  Spec.hs  UtilsSpec.hs
(+39 files in other folders)
