name:                draughts-coevol
version:             0.1.0.0
synopsis:            Short description of your package
homepage:            https://github.com/iichr/draughts-coevolution#readme
license:             BSD3
license-file:        LICENSE
author:              Chris Iliev
maintainer:          cii549@cs.bham.ac.uk
copyright:           2017, 2018 Chris Iliev
category:            Game
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

-- To avoid duplicated efforts in documentation and dealing with the
-- complications of embedding Haddock markup inside cabal files, it is
-- common to point users to the README.md file.
description:         Please see the README on Github at <https://github.com/iichr/draughts-coevolution#readme>

library
  hs-source-dirs:      src
  exposed-modules:     Lib, Boardvector
  build-depends:       base >= 4.7 && < 5, containers, vector
  default-language:    Haskell2010

executable draughts-coevol-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base, containers, vector, draughts-coevol 
  default-language:    Haskell2010

test-suite draughts-coevol-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , draughts-coevol
                     , hspec
                     , hspec-discover
                     , containers
                     , vector
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  other-modules:       BoardvectorSpec
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/iichr/draughts-coevolution
